tests/golden/error/private_use_not_exported/source.tg
// Source module with a public function.

pub fn secret_fn() -> Nat { 42 }
